--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "art-template": "^4.13.2"
+    "art-template": "^4.13.2",
+    "get-pixels": "^3.3.2",
+    "xlsx": "^0.14.3"
   }
 }
