--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "exceljs": "^1.12.1",
+    "express": "^4.17.1",
     "get-pixels": "^3.3.2",
     "moment": "^2.24.0",
     "xlsx": "^0.14.3"
