--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "art-template": "^4.13.2",
+    "body-parser": "^1.19.0",
     "exceljs": "^1.12.1",
     "express": "^4.17.1",
+    "express-art-template": "^1.0.1",
     "get-pixels": "^3.3.2",
     "moment": "^2.24.0",
     "xlsx": "^0.14.3"
