--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "art-template": "^4.13.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "exceljs": "^1.12.1",
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
