--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.17.1",
     "express-art-template": "^1.0.1",
     "get-pixels": "^3.3.2",
+    "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "xlsx": "^0.14.3"
   }
