--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "get-pixels": "^3.3.2",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "mongoose": "^5.6.4",
     "xlsx": "^0.14.3"
   }
 }
